# pad-lattice

./: .gitignore  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: device-profile-validation.yml
.github/workflows/: build-and-test.yml  documentation.yml  publish-pypi.yml  publish-testpypi.yml  security-audit.yml
docs-site/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs-site/docs/: overview.md
docs-site/docs/about/: license.md  origin-and-development.md  roadmap.md
docs-site/docs/reference/: cli.md  socket-protocol.md
docs-site/docs/technical-details/: architecture.md  developer-guide.md  device-profiles.md  device-testing.md  index.md  multi-agent-design.md  production.md  security-model.md  virtual-surface.md  visual-language.md
docs-site/docs/usage/: audio-feedback.md  codex-integration.md  connect-browsers.md  control-codex.md  device-testing.md  production.md  quickstart.md  troubleshooting.md  virtual-surface.md  visual-language.md  visual-show.md
docs-site/plugins/publish-schemas/: index.js
docs-site/src/css/: custom.css
docs-site/src/pages/: index.module.css  index.tsx
src/pad_lattice/: __init__.py  audio.py  cli.py  client.py  codex_cli.py  codex_exec.py  codex_hook_entry.py  codex_hooks.py  codex_session.py  control_plane.py  daemon.py  daemon_runtime.py  demo_agent.py  diagnostics.py  events.py  experience_compiler.py  experience_manifest.py  experience_runtime.py  identity_store.py  launchpad.py  protocol.py  schema_validation.py  show.py  visual_protocol.py  web_protocol.py  web_surface.py
src/pad_lattice/devices/: __init__.py  base.py  composite.py  factory.py  midi_grid.py  profiles.py  testing.py
src/pad_lattice/schemas/: demo-manifest-v1.json  (+4 more)
tests/: live_web_harness.py  test_audio.py  test_cli.py  test_client.py  test_codex_cli.py  test_codex_exec.py  test_codex_hooks.py  test_codex_session.py  test_composite_surface.py  test_control_plane.py  test_daemon.py  test_demo_agent.py  test_device_profiles.py  test_diagnostics.py  test_experience_manifest.py  test_identity_store.py  test_launchpad.py  test_midi_grid.py  test_profile_testing.py  test_protocol.py  test_published_schemas.py  test_schema_validation.py  test_show.py  test_visual_protocol.py  test_web_protocol.py  test_web_surface.py
tests/fixtures/: visual-protocol-v1.json
web-app/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web-app/e2e/: live-surface.spec.ts  public-demo.spec.ts
web-app/public/: config.json
web-app/src/: App.tsx  VirtualSurface.tsx  audio.ts  demo.test.ts  demo.ts  experiences.test.ts  experiences.ts  live.ts  styles.css  surfaceModel.test.ts  surfaceModel.ts  types.ts
(+13 files in other folders)
