[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pad-lattice"
version = "0.1.0"
description = "Novation Launchpad Pro Mk1 control surface for autonomous coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Manuel Rueda" },
]
dependencies = [
  "mido>=1.3",
  "python-rtmidi>=1.5",
]

[project.urls]
Homepage = "https://github.com/mrueda/pad-lattice"
Documentation = "https://mrueda.github.io/pad-lattice/"
Repository = "https://github.com/mrueda/pad-lattice"
Issues = "https://github.com/mrueda/pad-lattice/issues"

[project.scripts]
pad-lattice = "pad_lattice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
