[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pad-lattice"
dynamic = ["version"]
description = "Repurpose MIDI grid controllers as physical control surfaces for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name = "Manuel Rueda" },
]
keywords = [
  "ai-agents",
  "codex",
  "control-surface",
  "launchpad",
  "midi",
  "novation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "mido>=1.3",
  "python-rtmidi>=1.5",
]

[project.optional-dependencies]
release = [
  "build>=1.2",
  "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/mrueda/pad-lattice"
Documentation = "https://mrueda.github.io/pad-lattice/"
Repository = "https://github.com/mrueda/pad-lattice"
Issues = "https://github.com/mrueda/pad-lattice/issues"

[project.scripts]
pad-lattice = "pad_lattice.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pad_lattice = [
  "device_profiles/*/*/*.json",
]

[tool.setuptools.dynamic]
version = { attr = "pad_lattice.__version__" }
